# srwm-wayland

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  dagger.json  flake.nix
.dagger/: go.mod  main.go  platform.go  test.go
.github/workflows/: release.yml
resources/: config.example.toml  srwc-portals.conf  srwc.desktop
resources/extras/: config.toml  my_config.toml
src/: canvas.rs  decorations.rs  focus.rs  install.rs  lib.rs  main.rs  render.rs  screenshot_ui.rs  window_ext.rs
src/backend/: mod.rs  udev.rs  winit.rs
src/config/: defaults.rs  mod.rs  parse.rs  toml.rs  types.rs
src/dbus/: gnome_shell_introspect.rs  mod.rs  mutter_display_config.rs  mutter_screen_cast.rs  mutter_service_channel.rs
src/grabs/: mod.rs  move_grab.rs  navigate_grab.rs  pan_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs  xwayland.rs
src/input/: actions.rs  gestures.rs  mod.rs  pointer.rs
src/protocols/: foreign_toplevel.rs  image_capture_source.rs
src/render/: background.rs  blur.rs  mod.rs  screencopy.rs
src/screencasting/: mod.rs  pw_utils.rs
src/state/: animation.rs  cursor.rs  fit.rs  fullscreen.rs  mod.rs  navigation.rs  render_cache.rs
tests/: canvas_navigation_test.rs  canvas_transforms_test.rs  canvas_zoom_test.rs  config_bindings_test.rs  config_defaults_test.rs  config_parse_test.rs  config_toml_test.rs  momentum_test.rs  snap_test.rs  velocity_tracker_test.rs
