[package]
name = "srwc"
version = "0.2.2"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["infraflakes <infraflakes@proton.me>"]

[dependencies]
smithay-drm-extras = { git = "https://github.com/infraflakes/smithay.git"}
smithay = { git = "https://github.com/infraflakes/smithay.git", default-features = false, features = [
    "backend_winit",
    "backend_udev",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_egl",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
    "xwayland",
] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
xcursor = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2.185"
png = "0.18.1"
dirs = "6.0.0"
chrono = "0.4.44"
zbus = "5.14"
pipewire = { version = "0.9", features = ["v0_3_33"] }
async-io = "2.6"
anyhow = "1"
calloop = "0.14.4"
async-channel = "2.5.0"
